<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/screen">

        <FrameLayout style="@style/line">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                style="@style/theme_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/settings_dark" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/action_share"
            style="@style/line">

            <TextView
                style="@style/option"
                android:text="@string/settings_share" />

            <ImageView
                style="@style/option_icon"
                android:contentDescription="@string/img_share"
                android:src="@drawable/share" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_support"
            style="@style/line">

            <TextView
                style="@style/option"
                android:text="@string/settings_support" />

            <ImageView
                style="@style/option_icon"
                android:contentDescription="@string/img_support"
                android:src="@drawable/support" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_agreement"
            style="@style/line">

            <TextView
                style="@style/option"
                android:text="@string/settings_agreement" />

            <ImageView
                style="@style/option_icon"
                android:contentDescription="@string/img_agreement"
                android:src="@drawable/arrow_forward" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>