<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/screen_search"
        app:titleTextAppearance="@style/toolbar" />

    <LinearLayout style="@style/screen">

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/clear_icon"
            android:id="@+id/tilSearchTracksField"
            style="@style/searchMaskBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_search_mask"
                style="@style/searchInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/screen_search" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llSearchHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/searchHistoryHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_history_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTracksHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="16dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:layout_height="0dp" />

            <Button
                android:id="@+id/btTrackHistoryClear"
                style="@style/filledButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_history_clear" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_height="0dp" />

        <ProgressBar
            android:id="@+id/searchProgressBar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/progress_bar_margin"
            android:visibility="gone"
            tools:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivApiResponseIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/img_alert_icon"
                android:layout_marginTop="@dimen/error_icon_margin_top"
                tools:src="@drawable/something_went_wrong" />

            <TextView
                android:id="@+id/tvApiResponseMessage"
                style="@style/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivApiResponseIcon"
                android:layout_marginVertical="24dp"
                android:textAlignment="center"
                tools:text="Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету" />

        </RelativeLayout>
        <Button
            android:id="@+id/btSearchReload"
            style="@style/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update"
            android:visibility="invisible"
            tools:visibility="visible" />


    </LinearLayout>
</LinearLayout>