<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/artworkUrl"
        android:contentDescription="@string/image_artwork"
        android:layout_width="@dimen/cover_size_little"
        android:layout_height="@dimen/cover_size_little"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/cover_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTrackName"
            style="@style/track_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Smells Like Teen Spirit bla bla bla bla bla bla" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvArtistName"
                style="@style/track_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Nirvana nananananananannananannananannannannananna" />
            <ImageView
                android:contentDescription="@string/image_divider_point"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/divider_point" />

            <TextView
                android:id="@+id/tvTrackDuration"
                style="@style/track_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="12:34" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPlayTheTrackArrow"
        android:contentDescription="@string/image_arrow_forward"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:src="@drawable/arrow_forward" />

</androidx.appcompat.widget.LinearLayoutCompat>